# thirukkural-a-day

./: .env.example  .gitignore  CLAUDE.md  README.md
docs/: prompt-iteration.md
pipeline/: README.md  composite.py  generate.py  image.py  pyproject.toml  selected_kurals.json  story.py
pipeline/prompts/: panel_generation.md  story_generation.md  style_guide.md
web/: .gitignore  README.md  package.json  pnpm-lock.yaml  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx  types.ts
web/app/kural/[id]/: page.tsx
web/app/lib/: kurals.ts
